tests/snapshots/sqlparser_snapshot__generic__tpch_11.sql.snap
---
source: tests/sqlparser_snapshot.rs
expression: stmts
---
- Query:
    with: ~
    body:
      Select:
        distinct: ~
        top: ~
        projection:
          - UnnamedExpr:
              Identifier:
                value: ps_partkey
                quote_style: ~
          - ExprWithAlias:
              expr:
                Function:
                  name:
                    - value: sum
                      quote_style: ~
                  args:
                    - Unnamed:
                        Expr:
                          BinaryOp:
                            left:
                              Identifier:
                                value: ps_supplycost
                                quote_style: ~
                            op: Multiply
                            right:
                              Identifier:
                                value: ps_availqty
                                quote_style: ~
                  filter: ~
                  null_treatment: ~
                  over: ~
                  distinct: false
                  special: false
                  order_by: []
              alias:
                value: value
                quote_style: ~
        into: ~
        from:
          - relation:
              Table:
                name:
                  - value: partsupp
                    quote_style: ~
                alias: ~
                args: ~
                with_hints: []
                version: ~
                partitions: []
            joins: []
          - relation:
              Table:
                name:
                  - value: supplier
                    quote_style: ~
                alias: ~
                args: ~
                with_hints: []
                version: ~
                partitions: []
            joins: []
          - relation:
              Table:
                name:
                  - value: nation
                    quote_style: ~
                alias: ~
                args: ~
                with_hints: []
                version: ~
                partitions: []
            joins: []
        lateral_views: []
        selection:
          BinaryOp:
            left:
              BinaryOp:
                left:
                  BinaryOp:
                    left:
                      Identifier:
                        value: ps_suppkey
                        quote_style: ~
                    op: Eq
                    right:
                      Identifier:
                        value: s_suppkey
                        quote_style: ~
                op: And
                right:
                  BinaryOp:
                    left:
                      Identifier:
                        value: s_nationkey
                        quote_style: ~
                    op: Eq
                    right:
                      Identifier:
                        value: n_nationkey
                        quote_style: ~
            op: And
            right:
              BinaryOp:
                left:
                  Identifier:
                    value: n_name
                    quote_style: ~
                op: Eq
                right:
                  Value:
                    SingleQuotedString: GERMANY
        group_by:
          Expressions:
            - Identifier:
                value: ps_partkey
                quote_style: ~
        cluster_by: []
        distribute_by: []
        sort_by: []
        having:
          BinaryOp:
            left:
              Function:
                name:
                  - value: sum
                    quote_style: ~
                args:
                  - Unnamed:
                      Expr:
                        BinaryOp:
                          left:
                            Identifier:
                              value: ps_supplycost
                              quote_style: ~
                          op: Multiply
                          right:
                            Identifier:
                              value: ps_availqty
                              quote_style: ~
                filter: ~
                null_treatment: ~
                over: ~
                distinct: false
                special: false
                order_by: []
            op: Gt
            right:
              Subquery:
                with: ~
                body:
                  Select:
                    distinct: ~
                    top: ~
                    projection:
                      - UnnamedExpr:
                          BinaryOp:
                            left:
                              Function:
                                name:
                                  - value: sum
                                    quote_style: ~
                                args:
                                  - Unnamed:
                                      Expr:
                                        BinaryOp:
                                          left:
                                            Identifier:
                                              value: ps_supplycost
                                              quote_style: ~
                                          op: Multiply
                                          right:
                                            Identifier:
                                              value: ps_availqty
                                              quote_style: ~
                                filter: ~
                                null_treatment: ~
                                over: ~
                                distinct: false
                                special: false
                                order_by: []
                            op: Multiply
                            right:
                              Value:
                                Number:
                                  - "0.0001000000"
                                  - false
                    into: ~
                    from:
                      - relation:
                          Table:
                            name:
                              - value: partsupp
                                quote_style: ~
                            alias: ~
                            args: ~
                            with_hints: []
                            version: ~
                            partitions: []
                        joins: []
                      - relation:
                          Table:
                            name:
                              - value: supplier
                                quote_style: ~
                            alias: ~
                            args: ~
                            with_hints: []
                            version: ~
                            partitions: []
                        joins: []
                      - relation:
                          Table:
                            name:
                              - value: nation
                                quote_style: ~
                            alias: ~
                            args: ~
                            with_hints: []
                            version: ~
                            partitions: []
                        joins: []
                    lateral_views: []
                    selection:
                      BinaryOp:
                        left:
                          BinaryOp:
                            left:
                              BinaryOp:
                                left:
                                  Identifier:
                                    value: ps_suppkey
                                    quote_style: ~
                                op: Eq
                                right:
                                  Identifier:
                                    value: s_suppkey
                                    quote_style: ~
                            op: And
                            right:
                              BinaryOp:
                                left:
                                  Identifier:
                                    value: s_nationkey
                                    quote_style: ~
                                op: Eq
                                right:
                                  Identifier:
                                    value: n_nationkey
                                    quote_style: ~
                        op: And
                        right:
                          BinaryOp:
                            left:
                              Identifier:
                                value: n_name
                                quote_style: ~
                            op: Eq
                            right:
                              Value:
                                SingleQuotedString: GERMANY
                    group_by:
                      Expressions: []
                    cluster_by: []
                    distribute_by: []
                    sort_by: []
                    having: ~
                    named_window: []
                    qualify: ~
                order_by: []
                limit: ~
                limit_by: []
                offset: ~
                fetch: ~
                locks: []
        named_window: []
        qualify: ~
    order_by:
      - expr:
          Identifier:
            value: value
            quote_style: ~
        asc: false
        nulls_first: ~
    limit: ~
    limit_by: []
    offset: ~
    fetch: ~
    locks: []

